test/Kubernetes.Tests/testassets/external-name-ingress/clusters.json
[
  {
    "ClusterId": "external-service.default:443",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
      "http://external-service.example.com:443": {
        "Address": "http://external-service.example.com:443",
        "Health": null,
        "Metadata": null
      }
    },
    "Authentication": {},
    "Metadata": null
  }
]
